--- a/style.css
+++ b/style.css
@@ -1,44 +1,123 @@
-*{
-	box-sizing: border-box;
-}
-
-html {
-    font-family: "Lucida Sans", sans-serif;
-}
-
-[class*="col-"] {
-    float: left;
-    padding: 15px;
- }
-
 header {
-    background-color: #9933cc;
-    color: #ffffff;
-    padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  color: white;
+  background-color: #50AFA2;
 }
 
-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    padding: 8px;
-    margin-bottom: 7px;
-    background-color: #33b5e5;
-    color: #ffffff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+#brand {
+  font-size: 30px;
+  font-weight: bold;
 }
 
-aside {
-    background-color: #33b5e5;
-    padding: 15px;
-    color: #ffffff;
-    text-align: center;
-    font-size: 14px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+nav ul {
+  list-style: none;
+  display: flex;
 }
+
+nav li {
+  margin-right: 15px;
+}
+
+section {
+  display: flex;
+  margin-right: 20px;
+  margin-left: 20px;
+  padding-bottom: 50px;
+}
+
+article, aside {
+  text-align: justify;
+}
+
+article {
+  margin-right: 20px;
+}
+
+img {
+  width: 100%;
+  height: 200px;
+}
+
 footer {
-    background-color: #0099cc;
-    color: #ffffff;
-    text-align: center;
-    font-size: 12px;
-    padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 20px;
+  margin-left: 20px;
+  border-top: solid;
+  border-color: #50AFA2;
+}
+
+#contact {
+  display: flex;
+}
+
+#contact p {
+  margin-right: 15px;
+}
+
+#social {
+  display: flex;
+  margin-right: 20px;
+}
+
+#social img {
+  height: 30px;
+  width: 30px;
+  margin-right: 5px;
+}
+
+@media (max-width: 640px) {
+  header {
+    display: flex;
+    align-items: center;
+    color: #50AFA2;
+    background-color: white;
+    border-bottom: solid;
+    border-color: #50AFA2;
+  }
+
+  nav {
+    width: auto;
+    text-align: left;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav li {
+    padding-left: 4px;
+  }
+
+  #banner {
+    display: none;
+  }
+
+  section {
+    flex-direction: column;
+  }
+
+  footer {
+    justify-content: space-around;
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+
+  #contact {
+    flex-direction: column;
+    padding-top: 10px;
+  }
+
+  #contact p {
+    margin: 0px;
+  }
+
+  #social {
+    margin-right: 0px;
+  }
+
+}
